--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2865,4 +2865,16 @@ body.is-menu-visible #menu {
   display: none;
 }
 
+.residence-card {
+  margin-bottom: 3rem;
+}
+
+.residence-card p {
+  margin-bottom: 0.4rem;
+}
+
+.residence-card h3 {
+  margin: 0;
+}
+
 
