Add spinner and fix error handling when sending inquiry

--- a/_includes/highlights.html
+++ b/_includes/highlights.html
@@ -1,9 +1,9 @@
 <section class="wrapper">
     <div class="inner">
-        <header class="special">
+        <!--header class="special">
             <h2>{% translate highlights_title %}</h2>
             <p>{% translate highlights_preamble %}</p>
-        </header>
+        </header-->
         <div class="highlights">
             {% for highlight in site.data.highlights[page.language] %}
             <section>
